# swimming-best

./: .gitignore  .npmrc  AGENTS.md  LICENSE  README.md  package.json
backend/: README.md  config.example.toml  go.mod  go.sum  pyproject.toml
backend/cmd/server/: main.go
backend/internal/analytics/: series_test.go  service.go
backend/internal/auth/: service.go  service_test.go
backend/internal/config/: config.go  config_test.go
backend/internal/db/: sqlite.go
backend/internal/domain/: models.go
backend/internal/http/: admin_api_test.go  public_api_test.go  router.go  router_test.go
backend/internal/repository/: sqlite.go  sqlite_test.go
backend/internal/service/: admin.go  admin_test.go  public.go  public_test.go
backend/swimming_best/: __main__.py  admin_routes.py  analytics.py  app.py  auth.py  config.py  db.py  event_catalog.py  import_export.py  official_grade_baseline.py  public_routes.py  repository.py  services.py
backend/swimming_best/resources/: official_swimming_grade_standards.cn-2025.json
backend/swimming_best_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py  test_admin_api.py  test_admin_export.py  test_auth_routes.py  test_config_runtime.py  test_custom_time_standards.py  test_db_migration.py  test_deploy_script.py  test_import_export.py  test_official_grade_baseline.py  test_public_api.py
docs/: 2026-04-03-openspec-delivery-summary.md  deployment.md
frontend/: README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/src/app/: globals.css  (+3 more)
scripts/: deploy.py  run_backend.sh  run_frontend.sh
(+341 files in other folders)
