[project]
name = "swimming-best-backend"
version = "0.1.0"
description = "Python backend for Swimming Best"
requires-python = ">=3.12,<4.0"
dependencies = [
  "flask>=3.1,<4.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.13"
uv = ">=0.7,<1.0"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
