[project]
name = "swimming-best-backend"
version = "0.1.0"
description = "Python backend for Swimming Best"
requires-python = ">=3.12,<4.0"
dependencies = [
  "flask>=3.1,<4.0",
]

[tool.poetry]
package-mode = false

[dependency-groups]
test = [
  "pytest>=8.3.5,<9.0.0",
]
lint = [
  "ruff>=0.11.13,<0.12.0",
]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
]

[tool.uv]
default-groups = ["dev"]

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "primary"

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-p", "no:cacheprovider"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".uv-cache*", ".pytest-local", "pytest-ok", "pytesttmp*"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
